--- a/LastnameFirstname.Rmd
+++ b/LastnameFirstname.Rmd
@@ -2,67 +2,34 @@
 author: "Firstname Lastname"
 title: "Title of your post"
 layout: post
-topic: "06"
-short-topic: More on reproducibility...
-due-date: 2022-03-03
+topic: "07"
+short-topic: All that legal stuff...
+due-date: 2022-03-10
 root: ../../
 ---
 
 ## Prompt:
 
-In 2009 one of the associate editors of Biostatistics, Roger Peng, outlined a new policy of [reproducibility](https://doi.org/10.1093/biostatistics/kxp014) for the journal. 
+The `DESCRIPTION` file of a package contains the package's meta information. Most of the fields in this file are quite straight forward: author, version number, and a short package description. When you call `library(help="<package name>")` for  package `<package name>` you can see the contents of the `DESCRIPTION` file for that package (and some parts of the `NAMESPACE` file).
 
-This triggered a response from one of the other associated editors, Niels Keiding, and subsequently a large part of volume 11, issue 3 of Biostatistics was dedicated to a discussion of issues of redproducibility. 
+Read through the chapter on [licenses](https://r-pkgs.org/license.html) from Wickham's book on R packages. 
 
+There are several important aspects to consider when choosing a license for your work. 
+Three of the main questions to answer are: 
 
-Read through 
+1. Are you and your collaborators fine with other people modifying your work and then sharing the modified work?
 
-- Roger Peng's [initial editorial](https://doi.org/10.1093/biostatistics/kxp014), 
+2. Are you and your collaborators fine with other people making a profit from those derivations?
 
-- [Keiding's response](https://doi.org/10.1093/biostatistics/kxq033),
-
-- its five [commentaries](https://academic.oup.com/biostatistics/issue/11/3),  
-
-- Roger Peng's [response to Keiding](https://doi.org/10.1093/biostatistics/kxq032)
-
-- and finally, Keiding's [response to the commentaries](https://doi.org/10.1093/biostatistics/kxq034)
-
-Don't worry about the number of papers listed - these papers are all very short and easy reads. 
+3. Who is responsible if your software does not do what it promises to do?
 
 
-Write a blog post addressing the questions: 
+Write a blog post addressing the following questions: 
 
-1. **Answer each of the following questions with at least 2-3 sentences.**
+1. **Under what license does R operate? What is the license for ggplot2?**
+2. **Answer the three questions listed above for the licenses: MIT, GPL-3,  LGPL-3, and CC-0. Note that some of the questions might not be answered with a simple yes/no. In that case, go into more detail, but do not just copy the terms of the license.**
+3. **Assume that you are in the process of making a package for your own graduate work. Describe considerations that come into play in deciding on a license. In case you are not quite at that stage in your graduate studies yet, come up with a likely scenario. Describe it and discuss.**
 
-    1. **Summarize Roger Peng's outline for reproducibility in** *Biostatistics*. 
-    2. **What are Keiding's main criticisms of the proposal?**. 
-    3. **Which point in the commentaries speaks to you the most? Why?**
-    4. **How does Keiding respond to the commentary you picked. What are his main points in his response?**
-    
-2. **Describe your experience with a data intensive (collaborative) project. What are the most prominent issues with ensuring reproducibility of research results (focus on dta related aspects)? What would you do differently if you could go back in time?**
-
-
-Go to [https://github.com/Stat585-at-ISU/blog-2019](https://github.com/Stat585-at-ISU/blog-2019) for instructions about how to prepare and submit your blog post.
-
-
-{% assign num_posts = site.blog | size %}
-{% if num_posts > 0 %}
-## Class posts:
-
-<ul>
-{% for post in site.blog %}
-  {% if page.topic == post.topic %}
-  <li><a href="{{ post.url }}">{{ post.title }} by {{ post.author }}</a></li>
-  {% endif %}
-{% endfor %}
-</ul>
-{% endif %}
-
-
-
-{% assign num_posts = site.blog | size %}
-{% if num_posts > 0 %}
-## Class posts:
 
 <ul>
 {% for post in site.blog %}
