--- a/README.Rmd
+++ b/README.Rmd
@@ -4,9 +4,12 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 <!-- badges: start -->
-[![Frontmatter check](../../workflows/check-yaml.yaml/badge.svg)](../../workflows/check-yaml.yaml)
-[![Render rmarkdown](../../workflows/render-rmarkdown.yaml/badge.svg)](../../workflows/render-rmarkdown.yaml)
+[![Frontmatter check](../../actions/workflows/check-yaml.yaml/badge.svg)](../../actions/workflows/check-yaml.yaml)
+[![Render rmarkdown](../../actions/workflows/render-rmarkdown.yaml/badge.svg)](../../actions/workflows/render-rmarkdown.yaml)
   <!-- badges: end -->
+  
+  
+https://github.com/Stat585-at-ISU/Blog-5/actions/workflows/check-yaml.yaml/badge.svg  
 
 In Blog 5 you had the first exposure to Github Actions. 
 We just checked frontmatter compliance (as we do for this round).
